@@ -14,6 +14,9 @@ remctl 3.0 (unreleased)
     the Ruby bindings, this is implemented as the source_ip class variable
     rather than a separate method.
 
+    Add new -b option to the remctl command-line client to specify the
+    source IP for client connections.
+
     Add new remctl_set_ccache function to the remctl library API and the
     Perl, PHP, Python, and Ruby bindings.  Call this function after
     remctl_new and before remctl_open to set the Kerberos credential cache
